# RTXHDR-EDID

./: EDID-EDA.py  EDID-Finder.py  EDID-Solver.py  README.md  polynomial_coeffs-old.npy  polynomial_coeffs-old.txt  polynomial_coeffs.npy  polynomial_coeffs.txt  pyproject.toml
